src/objects/DataIntegration__c.object
<CustomObject>
    <description>A definition of the single way integration of one data object to another.</description>
    <fields>
        <fullName>DataObjectSource__c</fullName>
        <description>The data object that is acting as the source of the integration.</description>
        <inlineHelpText>The data object that is acting as the source of the integration.</inlineHelpText>
        <label>Data Object Source</label>
        <referenceTo>DataObject__c</referenceTo>
        <relationshipLabel>Integrations (Source)</relationshipLabel>
        <relationshipName>DataIntegrationSources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DataObjectTarget__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Data Object that the integration is moving data into.</description>
        <inlineHelpText>The Data Object that the integration is moving data into.</inlineHelpText>
        <label>Data Object Target</label>
        <referenceTo>DataObject__c</referenceTo>
        <relationshipLabel>Integrations (Target)</relationshipLabel>
        <relationshipName>DataIntegrationTargets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>PreferredOnConflict__c</fullName>
        <description>In the event that one record is newer than the one being moved what record is preferred.</description>
        <inlineHelpText>In the event that one record is newer than the one being moved what record is preferred.</inlineHelpText>
        <label>Preferred on Conflict</label>
        <picklist>
            <picklistValues>
                <fullName>Source</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Target</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProcessErrorsURL__c</fullName>
        <description>When errors occur, what the URL that will allow viewing and correcting of these errors.</description>
        <inlineHelpText>When errors occur, what the URL that will allow viewing and correcting of these errors.</inlineHelpText>
        <label>Process Errors URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timing__c</fullName>
        <description>When and how often does this integration get executed.</description>
        <inlineHelpText>When and how often does this integration get executed. For event executed please specify as On-Demand.</inlineHelpText>
        <label>Timing</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Tools__c</fullName>
        <description>What technologies are moving the data between source and target.</description>
        <inlineHelpText>What technologies are moving the data between source and target.</inlineHelpText>
        <label>Tools</label>
        <picklist>
            <picklistValues>
                <fullName>Informatica Cloud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informatica PowerCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Control Object</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce APEX Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce APEX Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Workflow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Control Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle PL/SQL Procedure</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of integration that is occurring.</description>
        <inlineHelpText>The type of integration that is occurring.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Push</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synchronization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Data Integration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Integrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>